# broadside-cycif-stitch

./: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml
nextflow/: environment.yml  example-nextflow.config  pom.xml
nextflow/pipelines/: cycif-stitch.nf  prepare-cube-alignment.nf  prepare-rounds.nf  process-scenes.nf
nextflow/src/main/java/edu/harvard/bwh/jonaslab/broadside/cycif/: CheckSlideStatus.java  Scene.java  Slide.java
src/broadside/: config.py
src/broadside/_old_scripts/: tiff_to_zarr.py
src/broadside/adjustments/: alignment.py  hot_pixels.py
src/broadside/scripts/: assess_illum_profiles.py  compute_cube_alignments.py  convert_zarr_to_tiff.py  make_illum_profiles.py  make_zarr_pyramid.py  register_and_stitch.py  stack_tiles.py  tiff_to_zarr.py  write_ome_metadata.py
src/broadside/utils/: parallel.py
